[package]
name = "axum-hello"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
axum-template = { version = "2.2.0", features = ["minijinja"] }
lazy_static = "1.4.0"
serde = { version = "1.0.197", features = ["derive"] }
minijinja = "1.0.13"
tokio = { version = "1.36.0", features = ["full"] }
tokio-util = "0.7.10"
